# rabbet

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: CI.yml  bencher-main.yml  bencher-pr-fork-record.yml  bencher-pr-fork-run.yml  bencher-pr.yml  benchmark.yml  docs.yml  zizmor.yml
data/orders/: customers.csv
docs/: book.toml
docs/src/: SUMMARY.md  aggregations.md  contributing.md  development.md  joins.md  sql.md  viewing.md
examples/aggregate/: describe-operation.trycmd  error-invalid-operation.trycmd  error-invalid-underscore.trycmd  error-missing-args.trycmd  first-last.trycmd  help.trycmd  multiple-aggregations.trycmd  multiple-groupby.trycmd  no-grouping.trycmd  row-count.trycmd  simple-aggregation.trycmd
examples/cat/: basic.trycmd
examples/head/: basic.trycmd
examples/join/: csv-format.trycmd  left-join.trycmd
examples/query/: aggregation-query.trycmd  complex-join-query.trycmd  invalid-sql.trycmd  simple-query.trycmd
examples/tail/: basic.trycmd
scripts/: benchmark
src/: aggregate.rs  args.rs  cat.rs  groupby.rs  head.rs  io.rs  join.rs  main.rs  query.rs  tail.rs
tests/: cli_tests.rs
tests/aggregate/: describe-operation.trycmd  error-invalid-operation.trycmd  error-invalid-underscore.trycmd  error-missing-args.trycmd  first-last.trycmd  help.trycmd  multiple-aggregations.trycmd  multiple-groupby.trycmd  no-grouping.trycmd  row-count.trycmd  simple-aggregation.trycmd
tests/cat/: basic.trycmd
tests/data/basic/: orders.csv  products.csv
tests/head/: basic.trycmd
tests/help/: help.trycmd
tests/join/: csv-format.trycmd  help.trycmd  left-join.trycmd  missing-files.trycmd
tests/query/: invalid-sql.trycmd
tests/tail/: basic.trycmd
