[package]
name = "rabbet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive"] }
itertools = { version = "0.14.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
polars = { version = "0.35", default-features = false, features = ["csv"] }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
termsize = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = true
