[package]
name = "rabbet"
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive"] }
itertools = { version = "0.14.0", default-features = false }
polars = { version = "0.35", default-features = false, features = ["csv"] }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
termsize = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = "3.0"

[lints.clippy]
# Deny common clippy lints that catch potential bugs or poor practices
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
# Allow some pedantic lints that can be too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = true
